0.7.3
- Added computation of elastic modulus
- Bugfixes:
  - Regression analysis not working for some Windows regional settings (#142)
  - Filters not applied when loading a session
0.7.2
- Set histogram-based kernel density estimator as default (#133)
- Regression analysis:
  - Added generalized linear mixed effects model (#126)
  - Remember treatment and repetition for each measurement (#134)
- Bugfixes:
  - Same default location for find/add measurements dialogs (#139)
  - Opening saved sessions with more than nine data sets failed (#141)
0.7.1
- Improved speed by optimization of GUI functions 
- Hash checks: Replace exception with a user-friendly warning (#128)
- Change: Renamed config key "kde multivariate" to "kde accuracy"
- Bugfixes:
  - Contour plot displays unused contour accuracy parameters
  - Persistent busy cursor when trace or video data is missing
  - Directory selections not always remembered correctly
- dclab:
  - Add histogram-based kernel density estimator
  - Refactoring to improve code quality
0.7.0
- Allow to rename polygon filters (#119)
- dclab:
  - Traces are loaded lazily (on demand)
  - Add "Event index" column (#124)
0.6.9
- Disable kernel density estimation and contour plot by default (#116) 
- Add avi export option
- Bugfixes:
  - Fluorescence traces not shown for some data sets (#118)
  - Prefer the R package that is shipped with the executable over a
    system installation (#120)
  - Image plot and fluorescence traces were not always updated correctly
  - Regression: Contour plot offset by one frame in some cases (#121)
- dclab:
  - Add user defined data fields 0...9
  - Add principal components 1 and 2
  - Change Cell size to Area
0.6.8
- Speed-ups:
  - search for measurements (#113)
  - dclab 0.1.9dev10: contour handling
0.6.7
- Minimize memory usage for batch processing (#108)
- Allow export to flow cytometry standard file format (#54)
- dclab 0.1.9dev2: add support for "User Defined" column in tdms files