@@ -3,6 +3,7 @@
 - Bugfixes:
   - Regression analysis not working for some Windows regional settings (#142)
   - Filters not applied when loading a session
+  - Not possible to manually set plotting range
 0.7.2
 - Set histogram-based kernel density estimator as default (#133)
 - Regression analysis:
